# src/app/Http/Requests/V1/ScopedTokenRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\V1;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ScopedTokenRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'scope' => 'required|string|in:Web', // Validate device_type is exactly "Web"
+            'device_type' => 'required|string|in:Tizen', // Validate device_type is exactly "Tizen"
+        ];
+    }
+}
