# src/app/Models/User.php
@@ -8,6 +8,7 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Passport\HasApiTokens;
+use Illuminate\Support\Str;
 
 
 class User extends Authenticatable
@@ -40,9 +41,21 @@ class User extends Authenticatable
         'email_verified_at' => 'datetime',
         'password' => 'hashed',
     ];
+    protected static function boot()
+    {
+        parent::boot(); // Always call the parent method first
 
+        // Define a "creating" model event listener
+        static::creating(function ($user) {
+
+            $user->username = 'user_'.Str::random(8);// Ensure this value is unique
+        });
+
+        // You can add more event listeners here for other model events
+    }
     public function getMobileAttribute($value)
     {
         return substr($value, 0, 3) . '****' . substr($value, -4);
     }
+
 }
